# langcore

./: .gitattributes  .gitignore  CHANGELOG.md  NOTICE  README.md  pyproject.toml
.github/workflows/: release.yml
benchmarks/: benchmark.py  config.py  plotting.py  utils.py
docs/examples/: batch_api_example.md  japanese_extraction.md  longer_text_example.md  medication_examples.md
examples/custom_provider_plugin/: README.md  pyproject.toml  test_example_provider.py
examples/custom_provider_plugin/langcore_provider_example/: __init__.py  provider.py  schema.py
examples/notebooks/: romeo_juliet_extraction.ipynb
examples/ollama/: Dockerfile  README.md  demo_ollama.py  docker-compose.yml
langcore/: __init__.py  _config.py  _consensus.py  _pydantic_validation.py  annotation.py  chunking.py  data.py  data_lib.py  evaluation.py  exceptions.py  extraction.py  factory.py  hooks.py  inference.py  io.py  plugins.py  progress.py  prompt_validation.py  prompting.py  registry.py  reliability.py  resolver.py  schema.py  schema_adapter.py  schema_generator.py  tokenizer.py  visualization.py
langcore/_compat/: __init__.py
langcore/core/: __init__.py  base_model.py  data.py  debug_utils.py  exceptions.py  format_handler.py  schema.py  schema_utils.py  tokenizer.py  types.py
langcore/providers/: README.md  __init__.py  builtin_registry.py  gemini.py  gemini_batch.py  ollama.py  openai.py  patterns.py  router.py
langcore/providers/schemas/: __init__.py  gemini.py
scripts/: create_provider_plugin.py
tests/: annotation_test.py  async_extraction_test.py  chunking_test.py  confidence_scoring_test.py  consensus_test.py  data_lib_test.py  evaluation_test.py  extract_precedence_test.py  extract_schema_integration_test.py  factory_schema_test.py  factory_test.py  format_handler_test.py  global_hooks_test.py  hooks_test.py  inference_test.py  init_test.py  progress_test.py  prompt_validation_test.py  prompting_test.py  provider_plugin_test.py  provider_schema_test.py  pydantic_retry_test.py  registry_test.py  reliability_test.py  resolver_test.py  schema_adapter_test.py  schema_generator_test.py  schema_test.py  test_annotation_merge.py  test_gemini_batch_api.py  test_kwargs_passthrough.py  test_live_api.py  test_ollama_integration.py  to_pydantic_test.py  tokenizer_test.py  visualization_test.py
